==> GitGriever/Game/Keil_v5/ARM/Boards/ST/STM3220G-EVAL/RL/CAN/CAN_Ex1/CAN_STM32F20x.c <==
#include <RTL.h>                      /* RTX kernel functions & defines      */
#include <RTX_CAN.h>                  /* CAN Generic functions & defines     */
#include <stm32f2xx.h>                /* STM32F20x register definitions      */
#define __CTRL1                 1
#define __CTRL2                 2
#define __FILTER_BANK_MAX      27     /* filter banks 0..27 */
#define CAN_CLK               30000000

static CAN_ERROR CAN_hw_set_baudrate (U32 ctrl, U32 baudrate)  {
  U32 brp;

  /* Note: this calculations fit for CAN_CLK = 30MHz                         */
  /* Determine which nominal time to use for requested baudrate and set
     appropriate bit timing                                                  */
  if (baudrate <= 500000)  {
    brp  = (CAN_CLK / 15) / baudrate;

    /* Load the baudrate registers BTR                                       */
    /* so that sample point is at about 72% bit time from bit start          */
    /* TSEG1 = 10, TSEG2 = 4, SJW = 4 => 1 CAN bit = 15 TQ, sample at 67%    */
    CAN_set_timing(ctrl, 10, 4, 4, brp);
  }  else if (baudrate <= 1000000)  {
    brp  = (CAN_CLK / 10) / baudrate;

    /* Load the baudrate registers BTR                                       */
    /* so that sample point is at about 72% bit time from bit start          */
    /* TSEG1 = 6, TSEG2 = 3, SJW = 3 => 1 CAN bit = 10 TQ, sample at 70%     */
    CAN_set_timing(ctrl,  6, 3, 3, brp);
  }  else  {
    return CAN_BAUDRATE_ERROR;
  }

  return CAN_OK;
}

CAN_ERROR CAN_hw_setup (U32 ctrl)  {

  switch (ctrl) {
    case 1: 
      #if USE_CAN_CTRL1 == 1
        /* Enable clock for CAN1 and GPIOD */
        RCC->APB1ENR   |= (1 << 25);
        RCC->AHB1ENR   |= (1 <<  3);
        /* CAN1, use PD0, PD1 */
        GPIOD->MODER   &= ~(( 3 << ( 0 << 1)) | ( 3 << ( 1 << 1)));
        GPIOD->MODER   |=  (( 2 << ( 0 << 1)) | ( 2 << ( 1 << 1)));
        GPIOD->OTYPER  &= ~(( 1 <<   0)       | ( 1 <<   1      ));
        GPIOD->OSPEEDR &= ~(( 3 << ( 0 << 1)) | ( 3 << ( 1 << 1)));
        GPIOD->PUPDR   &= ~(( 3 << ( 0 << 1)) | ( 3 << ( 1 << 1)));
        GPIOD->AFR[0]  &= ~((15 << ( 0 << 2)) | (15 << ( 1 << 2)));
        GPIOD->AFR[0]  |=  (( 9 << ( 0 << 2)) | ( 9 << ( 1 << 2)));
        /* Enable CAN1 interrupts */
        NVIC_SetPriority (CAN1_TX_IRQn,  1);
        NVIC_SetPriority (CAN1_RX0_IRQn, 1);
        NVIC_EnableIRQ   (CAN1_TX_IRQn);
        NVIC_EnableIRQ   (CAN1_RX0_IRQn);
      #endif
      break;
    case 2: 
      #if USE_CAN_CTRL2 == 1
        /* Enable clock for CAN2 and GPIOB */
        RCC->APB1ENR   |= (1 << 25) | (1 << 26);
        RCC->AHB1ENR   |= (1 <<  1);
        /* CAN2, use PB5, PB13 */
        GPIOB->MODER   &= ~(( 3 << ( 5 << 1)) | ( 3 << (13 << 1)));
        GPIOB->MODER   |=  (( 2 << ( 5 << 1)) | ( 2 << (13 << 1)));
        GPIOB->OTYPER  &= ~(( 1 <<   5)       | ( 1 <<  13      ));
        GPIOB->OSPEEDR &= ~(( 3 << ( 5 << 1)) | ( 3 << (13 << 1)));
        GPIOB->PUPDR   &= ~(( 3 << ( 5 << 1)) | ( 3 << (13 << 1)));
        GPIOB->AFR[0]  &= ~ (15 << ( 5 << 2));
        GPIOB->AFR[0]  |=   ( 9 << ( 5 << 2));
        GPIOB->AFR[1]  &= ~ (15 << ( 5 << 2));
        GPIOB->AFR[1]  |=   ( 9 << ( 5 << 2));
        /* Enable CAN2 interrupts */
        NVIC_SetPriority (CAN2_TX_IRQn,  1);
        NVIC_SetPriority (CAN2_RX0_IRQn, 1);
        NVIC_EnableIRQ   (CAN2_TX_IRQn);
        NVIC_EnableIRQ   (CAN2_RX0_IRQn);
      #endif
      break;
    default:
      return CAN_UNEXIST_CTRL_ERROR;
  }

  return CAN_OK;
}

CAN_ERROR CAN_hw_init (U32 ctrl, U32 baudrate)  {
  CAN_TypeDef *CANx = CAN_CTRL[ctrl-1];

  CANx->MCR = (1 << 0);               /* Init mode, with enabled automatic   */
                                      /* retransmission only FIFO 0,         */
                                      /* transmit mailbox 0 used             */
  while (!(CANx->MSR & (1 << 0)));
  CANx->IER = ((1 << 1) | (1 << 0));  /* FIFO 0 msg pending,                 */
                                      /* Transmit mbx empty                  */

  if (CAN_hw_set_baudrate(ctrl, baudrate) != CAN_OK)         /* Set baudrate */
    return CAN_BAUDRATE_ERROR;

  return CAN_OK;
}

CAN_ERROR CAN_hw_start (U32 ctrl)  {
  CAN_TypeDef *CANx = CAN_CTRL[ctrl-1];

  CANx->MCR &= ~(1 << 0);             /* normal operating mode, reset INRQ   */
  while (CANx->MSR & (1 << 0));

  return CAN_OK;
}

CAN_ERROR CAN_hw_tx_empty (U32 ctrl)  {
  CAN_TypeDef *CANx = CAN_CTRL[ctrl-1];

  if ((os_sem_wait (wr_sem[ctrl-1], 0) != OS_R_TMO)){ /* If semaphore is free*/
    if ((CANx->TSR & (1 << 26)) != 0) /* Transmit mailbox 0 is empty         */
      return CAN_OK;
    else 
      os_sem_send(wr_sem[ctrl-1]);    /* Return a token back to semaphore    */
  }

  return CAN_TX_BUSY_ERROR;
}

CAN_ERROR CAN_hw_wr (U32 ctrl, CAN_msg *msg)  {
  CAN_TypeDef *CANx = CAN_CTRL[ctrl-1];

  /* Reset TIR register                                                      */
  CANx->sTxMailBox[0].TIR  = (U32)0;                       /* reset TXRQ bit */

  /* Setup the identifier information                                        */
  if (msg->format == STANDARD_FORMAT)  {                   /*    Standard ID */
    CANx->sTxMailBox[0].TIR |= (U32)(msg->id << 21);
  }  else  {                                               /* Extended ID    */
    CANx->sTxMailBox[0].TIR |= (U32)(msg->id <<  3) | (1 << 2);
  }

  /* Setup type information                                                  */
  if (msg->type == REMOTE_FRAME)  {                        /* REMOTE FRAME   */
    CANx->sTxMailBox[0].TIR |= (1 << 1);
  }

  /* Setup data bytes                                                        */
  CANx->sTxMailBox[0].TDLR = (((U32)msg->data[3] << 24) |
                              ((U32)msg->data[2] << 16) |
                              ((U32)msg->data[1] <<  8) |
                              ((U32)msg->data[0])       );
  CANx->sTxMailBox[0].TDHR = (((U32)msg->data[7] << 24) |
                              ((U32)msg->data[6] << 16) |
                              ((U32)msg->data[5] <<  8) |
                              ((U32)msg->data[4])       );

  /* Setup length                                                            */
  CANx->sTxMailBox[0].TDTR &= ~0x0000000F;
  CANx->sTxMailBox[0].TDTR |=  (msg->len & 0x0000000F);

  CANx->IER |= (1 << 0);                           /*  enable  TME interrupt */ 

  /*  transmit message                                                       */
  CANx->sTxMailBox[0].TIR  |=  (1 << 0);                   /*   set TXRQ bit */

  return CAN_OK;
}

static void CAN_hw_rd (U32 ctrl, U32 ch, CAN_msg *msg)  {
  CAN_TypeDef *CANx = CAN_CTRL[ctrl-1];

  /* Read identifier information                                             */
  if ((CANx->sFIFOMailBox[0].RIR & (1 << 2)) == 0) {        /* Standard ID   */
    msg->format = STANDARD_FORMAT;
    msg->id     = 0x000007FFUL & (CANx->sFIFOMailBox[0].RIR >> 21);
  }  else  {                                                /* Extended ID   */
    msg->format = EXTENDED_FORMAT;
    msg->id     = 0x1FFFFFFFUL & (CANx->sFIFOMailBox[0].RIR >> 3);
  }

  /* Read type information                                                   */
  if ((CANx->sFIFOMailBox[0].RIR & (1 << 1)) == 0) {
    msg->type =   DATA_FRAME;                               /* DATA   FRAME  */
  }  else  {
    msg->type = REMOTE_FRAME;                               /* REMOTE FRAME  */
  }

  /* Read length (number of received bytes)                                  */
  msg->len = (U32)0x0000000F & CANx->sFIFOMailBox[0].RDTR;

  /* Read data bytes                                                         */
  msg->data[0] = (U32)0x000000FF & (CANx->sFIFOMailBox[0].RDLR);
  msg->data[1] = (U32)0x000000FF & (CANx->sFIFOMailBox[0].RDLR >> 8);
  msg->data[2] = (U32)0x000000FF & (CANx->sFIFOMailBox[0].RDLR >> 16);
  msg->data[3] = (U32)0x000000FF & (CANx->sFIFOMailBox[0].RDLR >> 24);

  msg->data[4] = (U32)0x000000FF & (CANx->sFIFOMailBox[0].RDHR);
  msg->data[5] = (U32)0x000000FF & (CANx->sFIFOMailBox[0].RDHR >> 8);
  msg->data[6] = (U32)0x000000FF & (CANx->sFIFOMailBox[0].RDHR >> 16);
  msg->data[7] = (U32)0x000000FF & (CANx->sFIFOMailBox[0].RDHR >> 24);
}

CAN_ERROR CAN_hw_rx_object (U32 ctrl, U32 ch, U32 id, U32 object_para)  {
  U16 CAN_filterBnk = 0;
  U16 CAN_filterIdx = 0;
  
  /* find free filter */
  switch (ctrl) {
    case __CTRL1:        /* for CTRL1 we check from 0 .. __FILTER_BANK_MAX - CAN2_filterIdx */
      CAN_filterIdx = (CAN2_filterIdx == 0) ? __FILTER_BANK_MAX : __FILTER_BANK_MAX - CAN2_filterIdx - 1; 

      for (CAN_filterBnk = 0; CAN_filterBnk < CAN_filterIdx; CAN_filterBnk++) {
        if (CAN_hw_rx_object_chk (ctrl, CAN_filterBnk, object_para) == __TRUE) {
          CAN_hw_rx_object_add (ctrl, CAN_filterBnk, id, object_para);
          break;                                    /* stop the loop if we have added the object */
        }
      }
      break;

    case __CTRL2:        /* for CTRL2 we check from __FILTER_BANK_MAX .. [1 | CAN1_filterIdx] */
      CAN_filterIdx = (CAN1_filterIdx == 0) ? 0 : CAN1_filterIdx - 1; 

      for (CAN_filterBnk = __FILTER_BANK_MAX; CAN_filterBnk > CAN_filterIdx; CAN_filterBnk--) {
        if (CAN_hw_rx_object_chk (ctrl, CAN_filterBnk, object_para) == __TRUE) {
          CAN_hw_rx_object_add (ctrl, CAN_filterBnk, id, object_para);
          break;                                    /* stop the loop if we have added the object */
        }
      }
      break;
  }

  if (CAN_filterBnk != CAN_filterIdx)
    return CAN_OK;
  else
    return CAN_OBJECTS_FULL_ERROR;

}
